--- a/CSS/style.css
+++ b/CSS/style.css
@@ -36,7 +36,7 @@ ul {
 
 #nav-btn {
   background-color: var(--orange) ;  
-  color: white;
+  color: rgb(255, 255, 255);
   border: none;
   font-size: 10px;
   padding: 10px;
